Fixing timeDisplay text color on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ body {
   border-radius: 12px;
   background-color: #fff;
   box-shadow: 0 0 5px rgba(197, 21, 21, 0.3);
+  color: #1f2544;
 }
 
 h1 {
@@ -61,6 +62,7 @@ h1 {
   box-shadow: 0 0 5px rgb(0, 0, 0, 0.3);
   border-radius: 8px;
   outline: none;
+  color: #1f2544;
 }
 
 .button {
@@ -98,7 +100,7 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -110,7 +112,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 @media (max-width: 375px) {
   .app {
